Pile_of_Shame_Website/styles/styles.css
/* verhindert horizontales scrolling */
body {
  overflow-x: hidden;
}

/* header settings */
header {
  background-color: #ab5841;
  margin-left: -22px;
  width: 110%;
  margin-top: -20px;
}
/* background settings */
body {
  font-family: 'Baskerville';
  background-color: #ffe7d7;
}

/* Verhindert jegliches horizontale Scrollen */
* {
  box-sizing: border-box; /* Sorgt dafür, dass Padding und Border die Breite nicht erweitern */
}


/* Dividers */
.DividerLineHeader, .DividerLineNav {
  width: 100%; /* Breite auf Viewport anpassen */
  margin: 0; /* Keine negative Margins, die das Layout verschieben */
}

/* Index Flex Start */
.IndexMainFlex {
  display: flex;
  flex-direction: column;
}

.item1 {
  align-self: center;
  margin: 0;
}

.item1 img {
  width: 108vw;
  height: auto;
  display: block;
}
/* Index Flex End */

/* Navigation Flex Start */
.Buttons {
  display: flex;
  align-items: start;
  padding-left: 10px;
}
/* Navigation Flex End */


@media (max-width: 768px) {
  .Buttons {
    align-items: center;
    flex-direction: column;
  }

  * {
    box-sizing: border-box;
  }

  .item1 img {
    width: 103vw; /* Stellt sicher, dass das Bild die volle Breite des Viewports auf mobilen Geräten einnimmt */
    height: auto;
  }

  .item1 {
    padding: 0;
    margin: 0;
    width: 103vw;
  }

}

/* opacity for imprint text */
.ImprintSection {
  color: #000; /* Fallback */
  color: rgba(0, 0, 0, 0.5);
}

/* opacity for imprint headers */
.ImprintHeaders {
  color: #000; /* Fallback */
  color: rgb(0, 0, 0, 0.7);
}

/* Impressum Link Settings */
.ImprintLink {
  margin-left: 40px;
  margin-bottom: 10px;
}

/* Sticky Footer */
footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 110%;
}

/* Trennlinie über footer und footer settings */
footer {
  border-top: 3px solid #75261a;
  padding-top: 10px;
  background-color: #ab5841;
  margin-left: -22px;
}

/* Alignment Nav */
.navElement {
  display: inline-block;
  padding-right: 10px;
  color: white;
}

/* Divider below header */
.DividerLineHeader {
  border-bottom: 3px solid #75261a;
  padding-top: 25px;
  width: 100%;
}

/* Divider below nav */
.DividerLineNav {
  border-bottom: 3px solid #75261a;
  padding-top: 10px;
  width: 100%;
}

/* Logo settings */
.MaoMaoImage img {
  position: absolute;
  left: 15px;
  top: 10px;
  width: 65px;
}


/* Luke About settings */
.LukeImage img {
  width: 100px;
}

/* Johann About settings */
.JohannImage img {
  width: 100px;
}

/* Niclas About settings */
.NiclasImage img {
  width: 100px;
}

/* Luke Text settings */
.LukeText {
  margin-left: 0px;
  margin-top: 0px;
}

/* Seitenüberschrift Settings */
h1 {
  text-align: left;
  margin-left: 110px;
  margin-top: 10px;
  color: white;
}

nav {
  transform: translateY(-5px);
}

/* Navigation Buttons */
.NavButtons {
  background-color: #ab5841;
  font-family: Baskerville;
  font-size: 130%;
  color: white;
  border: none;
  transition-duration: 0.8s;
}

.NavButtons:hover {
  background-color: #a2543e;
  color: white;
  cursor: pointer;
}

.NavButtonsVariant {
  background-color: #6734267b;
  font-family: Baskerville;
  font-size: 130%;
  color: white;
  border: none;
}

